# Quick-RL

./: .gitignore  Cargo.toml  README.md  notes.txt
src/: algorithms.rs  config.json  config.rs  gym_funcs.rs  gym_lib.rs  lib.rs  main.rs  models.rs  tch_utils.rs  vec_gym_env.rs
src/algorithms/: common_utils.rs  ppo.rs
src/algorithms/common_utils/: gather_experience.rs  rollout_buffer.rs
src/algorithms/common_utils/gather_experience/: ppo_gather.rs
src/algorithms/common_utils/rollout_buffer/: rollout_buffer_host.rs  rollout_buffer_redis.rs  rollout_buffer_utils.rs  rollout_buffer_worker.rs
src/algorithms/ppo/: ppo_gather.rs  ppo_learn.rs
src/gym_funcs/: custom_conditions.rs  custom_rewards.rs  custom_state_setters.rs  necto_parser_2.rs
src/models/: model_base.rs  ppo.rs
src/models/ppo/: default_ppo.rs
src/tch_utils/: TensorDisplay.xml  dbg_funcs.rs  tensor_display.py
